--- a/common/data.tex
+++ b/common/data.tex
@@ -1,6 +1,6 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\todo{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\todo{Имя Отчество}}
+\newcommand{\thesisAuthorLastName}{\todo{Васеева}}
+\newcommand{\thesisAuthorOtherNames}{\todo{Татьяна Валериевна}}
 \newcommand{\thesisAuthorInitials}{\todo{И.\,О.}}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
