--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -8,7 +8,9 @@
 \IfFileExists{images/logo.pdf}{
   \begin{minipage}[b]{0.5\linewidth}
     \begin{flushleft}
-      \includegraphics[height=3.5cm]{logo}
+      %\includegraphics[height=3.5cm]{logo}
+      \includegraphics[height=3.5cm]{omgups}
+      
     \end{flushleft}
   \end{minipage}%
   \begin{minipage}[b]{0.5\linewidth}
