--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\todo{Васеева}}
-\newcommand{\thesisAuthorOtherNames}{\todo{Татьяна Валериевна}}
-\newcommand{\thesisAuthorInitials}{\todo{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Васеева}
+\newcommand{\thesisAuthorOtherNames}{Татьяна Валериевна}
+\newcommand{\thesisAuthorInitials}{Т.\,В.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,44 +15,40 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\todo{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\todo{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{\textsc{совершенствование алгоритмов обработки изображений для определения положения движущихся объектов}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\todo{XX.XX.XX}}
+{05.13.18}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\todo{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{Математическое моделирование, численные методы и комплексы программ}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\todo{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
 %% {\todo{Теория и~методика физического воспитания, спортивной тренировки,
 %% оздоровительной и~адаптивной физической культуры}}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\todo{кандидата физико-математических наук}}
+{кандидата технических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\todo{канд. физ.-мат. наук}}
+{канд. техн. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\todo{Город}}
+{Омск}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{\todo{20XX}}
+{2020}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\todo{Федеральное государственное автономное образовательное учреждение высшего
-образования <<Длинное название образовательного учреждения <<АББРЕВИАТУРА>>}}
+{Федеральное государственное автономное образовательное учреждение высшего
+образования <<Омский государственный университет путей сообщения>> (ОмГУПС)}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
 {\todo{НазУчДисРаб}}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\todo{учреждении с~длинным длинным длинным длинным названием, в~котором
-выполнялась данная диссертационная работа}}
+{<<Омском государственном университете путей сообщения>>}
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Альтман Евгений Анатольевич}
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
-{\todo{уч. степень, уч. звание}}
+{кандидат технических наук, доцент}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{\todo{И.\,О.~Фамилия}}
+{Е.\,А.~Альтман}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
 {\todo{уч.~ст.,~уч.~зв.}}
 
