--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -4,7 +4,24 @@
 
 Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
+
+
+
 \section{Ссылки}\label{sec:ch1/sec2}
+
+Ссылки на собственные работы:
+\cite{альтман2019кэш}
+\cite{васеева2019сравнительный}
+\cite{васеева2019}
+\cite{васеева2018информационно}
+\cite{васееваисследование}
+\cite{александров2018оценка}
+\cite{васеева2018применение}
+\cite{альтман2018расширение}
+\cite{терентьева2017алгоритм}
+\cite{альтман2017применение}
+\cite{васеева2017распознавание}
+\cite{Васеева2017}
 
 Сошлёмся на библиографию.
 Одна ссылка: \cite[с.~54]{Sokolov}\cite[с.~36]{Gaidaenko}.
@@ -135,6 +152,8 @@ test:eisner-sample-shorted, AB_patent_Pomerantz_1968, iofis_patent1960}
 Здесь первый амперсанд (в исходном \LaTeX\ описании формулы) означает
 выравнивание по~левому краю, второй "--- по~\( x \), а~третий "--- по~слову
 <<если>>. Команда \verb|\quad| делает большой горизонтальный пробел.
+
+
 
 Ещё вариант:
 \[
