--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 @inproceedings{confbib1,
   author = {Фамилия, И. О.},
   title = {название тезисов конференции},
@@ -90,3 +91,122 @@
   language = {russian},
   authorwos = {true},
 }
+
+@InProceedings{васеева2019сравнительный,
+  author    = {Васеева, ТВ and Альтман, ЕА and Елизаров, ДА},
+  title     = {Сравнительный анализ методов определения параметров гармоник сигнала электрической сети},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  year      = {2019},
+  pages     = {261--267},
+  keywords  = {качество электрической энергии, гармоники, интергармоники, оконная функция },
+  url       = {https://elibrary.ru/download/elibrary_37530330_61900460.pdf},
+}
+
+@InProceedings{васеева2018применение,
+  author    = {Васеева, Татьяна Валерьевна and Альтман, Евгений Анатольевич and Малютин, Андрей Геннадьевич},
+  title     = {Применение быстрых алгоритмов для выполнения фильтрации изображений},
+  booktitle = {Современные проблемы радиоэлектроники},
+  year      = {2018},
+  pages     = {162--165},
+}
+
+@InProceedings{васеева2019,
+  author    = {Васеева, ТВ and Альтман, ЕА and Александров, АВ},
+  title     = {Сравнительный анализ применения алгоритмов определения частоты при оценке гармоник в электрических сетях},
+  booktitle = {Системы управления, информационные технологии и математическое моделирование},
+  year      = {2019},
+  pages     = {61--66},
+  keywords  = {цифровая обработка сигналов, качество электрической энергии, гармоники, алгоритмы, Быстрое Преобразование Фурье },
+  url       = {https://elibrary.ru/download/elibrary_38249025_91173531.pdf},
+}
+
+@InProceedings{альтман2018расширение,
+  author    = {Альтман, ЕА and Афанасьева, НС and Васеева, ТВ},
+  title     = {Расширение глубины резкости изображений программным способом},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  year      = {2018},
+  pages     = {222--227},
+  keywords  = {глубина резкости, вычислительная фотография, стекирование изображений, особые точки, детектор особых точек, гомография, размытие гаусса, лаплассиан, сшивка изображений},
+}
+
+@Article{васееваисследование,
+  author   = {Васеева, Татьяна Валериевна and Альтман, Евгений Анатольевич},
+  title    = {Исследование точности математических моделей алгоритмов реализованных на языках высокого уровня},
+  journal  = {Информационные и управляющие системы на транспорте и в},
+  year     = {2018},
+  pages    = {236--243},
+  keywords = {быстродействия алгоритмов, временные затраты, свертка },
+  url      = {https://elibrary.ru/download/elibrary_35626656_49101388.pdf},
+}
+
+@InProceedings{александров2018оценка,
+  author    = {Александров, Александр and Васеева, Татьяна and Ананьева, Надежда},
+  title     = {Оценка эффективности алгоритма корреляции для различных аппаратных платформ},
+  booktitle = {Тезисы XIX Всероссийской конференции молодых учёных по математическому моделированию и информационным технологиям},
+  year      = {2018},
+  pages     = {54--54},
+  url       = {https://elibrary.ru/download/elibrary_36395606_65823953.pdf},
+}
+
+@InProceedings{васеева2018информационно,
+  author    = {Васеева, ТВ and Альтман, ЕА and Елизаров, ДА},
+  title     = {Информационно-измерительная система для анализа гармоник сигнала в электрической сети},
+  booktitle = {САПР и моделирование в современной электронике},
+  year      = {2018},
+  pages     = {131--135},
+  doi       = {10.30987/conferencearticle_5c19e5fbf19926.94126870},
+  url       = {http://www.niiatm.ru/misapr/article140},
+}
+
+@Article{Васеева2017,
+  author   = {Васеева, Татьяна Валериевна and Александров, Александр Владимирович},
+  title    = {Реализация алгоритмов вычисления корреляции для диагностирования подвижного состава методами корреляционного анализа},
+  journal  = {ТЕХНОЛОГИЧЕСКОЕ ОБЕСПЕЧЕНИЕ РЕМОНТА И ПОВЫШЕНИЕ ДИНАМИЧЕСКИХ КАЧЕСТВ ЖЕЛЕЗНОДОРОЖНОГО ПОДВИЖНОГО СОСТАВА},
+  year     = {2017},
+  keywords = {корреляционный анализ, коэффициент корреляции, корреляция },
+  url      = {https://elibrary.ru/download/elibrary_32167635_26178414.pdf},
+}
+
+@InProceedings{терентьева2017алгоритм,
+  author    = {Терентьева, АВ and Васеева, ТВ and Кильдибеков, АБ},
+  title     = {Алгоритм детектирования лиц в различных ракурсах и наклонах},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  year      = {2017},
+  pages     = {250--255},
+  keywords  = {компьютерное зрение, алгоритмы распознавания лиц, библиотека opencv, метод виолы-джонса, каскады хаара, мобильное приложение, зеркало, python },
+  url       = {https://elibrary.ru/download/elibrary_29370837_30585305.pdf},
+}
+
+@InProceedings{васеева2017распознавание,
+  author    = {Васеева, Татьяна},
+  title     = {Распознавание границ движущихся объектов методами компьютерного зрения},
+  booktitle = {Информационно-телекоммуникационные системы и технологии},
+  year      = {2017},
+  pages     = {304--306},
+  url       = {https://elibrary.ru/download/elibrary_30520539_86047036.pdf},
+}
+
+@Article{альтман2017применение,
+  author    = {Альтман, Евгений Анатольевич and Захаренко, Елена Игоревна and Васеева, Татьяна Валериевна},
+  title     = {Применение метода разложения двумерной свертки при реализации цифровых фильтров},
+  journal   = {Научный вестник Новосибирского государственного технического университета},
+  year      = {2017},
+  number    = {4},
+  pages     = {95--104},
+  doi       = {10.17212/1814-1196-2017-4-95-104},
+  keywords  = {двумерная свертка, корреляция, цифровой фильтр, обработка изображений, быстрые алгоритмы, оценка эффективности, ядро фильтра, цифровой сигнал },
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+  url       = {https://journals.nstu.ru/vestnik/catalogue/contents/view_article?id=15526},
+}
+
+@InProceedings{альтман2019кэш,
+  author    = {Альтман, Евгений Анатольевич and Васеева, Татьяна Валериевна and Александров, Александр Владимирович},
+  title     = {Кэш-ориентированный алгоритм для вычисления многомерной корреляции},
+  booktitle = {Проблемы машиноведения},
+  year      = {2019},
+  pages     = {385--389},
+  keywords  = {свертка, корреляция, кэш память, алгоритм обработки, шаблоны},
+  url       = {https://elibrary.ru/download/elibrary_37541855_29354836.pdf},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
