--- a/common/data.tex
+++ b/common/data.tex
@@ -34,7 +34,7 @@
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {2020}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{Федеральное государственное автономное образовательное учреждение высшего
+{Федеральное государственное бюджетное образовательное учреждение высшего
 образования <<Омский государственный университет путей сообщения>> (ОмГУПС)}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
 {\todo{НазУчДисРаб}}
