--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -4,6 +4,7 @@
 
 Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
+\cite{гост30804.4.30-2013}
 
 
 
@@ -22,6 +23,22 @@
 \cite{альтман2017применение}
 \cite{васеева2017распознавание}
 \cite{Васеева2017}
+
+\begin{figure}[ht]
+	\centerfloat{
+		\includegraphics[scale=0.7]{picture1}
+	}
+	\caption{Развитие государственных стандартов в области контроля КЭ.}\label{fig:picture1}
+\end{figure}
+
+\begin{figure}[ht]
+	\centerfloat{
+		\includegraphics[scale=0.7]{picture2}
+	}
+	\caption{Упрощенная классификация обычно используемых методов гармонических и межгармонических оценок.}\label{fig:picture2}
+\end{figure}
+
+
 
 Сошлёмся на библиографию.
 Одна ссылка: \cite[с.~54]{Sokolov}\cite[с.~36]{Gaidaenko}.
