--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -209,4 +209,16 @@
   url       = {https://elibrary.ru/download/elibrary_37541855_29354836.pdf},
 }
 
+@Standard{гост30804.4.30-2013,
+  title        = {ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 30804.4.30-2013},
+  year         = {2014},
+  url          = {http://docs.cntd.ru/document/1200104665},
+  annotation   = {ГОСТ Р 51317.4.30-2008 -{\textgreater} ГОСТ 30804.4.30-2013},
+  date         = {2014-01-01},
+  file         = {2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/130/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf;2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/157/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf},
+  urldate      = {2019-11-16},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
