--- a/common/packages.tex
+++ b/common/packages.tex
@@ -225,6 +225,13 @@
 \usetikzlibrary{shapes.symbols}     % Для примера tikz рисунка
 \usetikzlibrary{arrows}             % Для примера tikz рисунка
 
+%%Добавила
+\usetikzlibrary{calc}
+\usetikzlibrary{decorations.pathreplacing}
+\usetikzlibrary{positioning}
+
+
+
 % если текущий процесс запущен библиотекой tikz-external, то прекомпиляция должна быть включена
 \ifdefined\tikzexternalrealjob
     \setcounter{imgprecompile}{1}
