--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -4,7 +4,26 @@
 
 Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
-\cite{гост30804.4.30-2013}
+Стандарты:
+\cite{ГОСТ30804.4.7-2013}
+\cite{ГОСТ30804.4.30-2013}
+\cite{ГОСТ33073-2014}
+\cite{ГОСТ32144-2013}
+\cite{ГОСТР54149-2010}
+\cite{ГОСТР51317.4.30-2008}
+\cite{ГОСТР51317.4.7-2008}
+\cite{ГОСТР8.655-2009}
+\cite{ГОСТ13109-97}
+\cite{ГОСТ30372-95}
+\cite{ГОСТ13109-87}
+\cite{ГОСТ8.216-88}
+\cite{ГОСТ19431-84}
+\cite{ГОСТ12.3.019-80}
+\cite{ГОСТ21027-75}
+\cite{ГОСТ16263-70}
+\cite{ГОСТ13109-67}
+\cite{ГОСТР51317.4.15-2012}
+
 
 
 
