--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -209,15 +209,212 @@
   url       = {https://elibrary.ru/download/elibrary_37541855_29354836.pdf},
 }
 
-@Standard{гост30804.4.30-2013,
+@Standard{ГОСТ30804.4.30-2013,
   title        = {ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой)},
   organization = {М.: Стандартинформ},
   number       = {ГОСТ 30804.4.30-2013},
   year         = {2014},
   url          = {http://docs.cntd.ru/document/1200104665},
-  annotation   = {ГОСТ Р 51317.4.30-2008 -{\textgreater} ГОСТ 30804.4.30-2013},
+  annotation   = {ГОСТ Р 51317.4.30-2008 недействующий, ГОСТ 30804.4.30-2013 действующий},
   date         = {2014-01-01},
   file         = {2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/130/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf;2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/157/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf},
+  urldate      = {2019-11-16},
+}
+
+@Standard{ГОСТ33073-2014,
+  title        = {ГОСТ 33073-2014 Электрическая энергия. Совместимость технических средств электромагнитная. Контроль и мониторинг качества электрической энергии в системах электроснабжения общего назначения (с Поправкой)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 33073-2014},
+  url          = {http://docs.cntd.ru/document/1200115349},
+  annotation   = {Статус: действует},
+  date         = {2015-01-01},
+  file         = {2015 - ГОСТ 33073-2014 Электрическая энергия. Совместимо.pdf:files/374/2015 - ГОСТ 33073-2014 Электрическая энергия. Совместимо.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ30804.4.7-2013,
+  title        = {ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 30804.4.7-2013},
+  url          = {http://docs.cntd.ru/document/1200103652/},
+  annotation   = {ГОСТ Р 51317.4.7-2008 недействующий, ГОСТ 30804.4.7-2013 действующий},
+  date         = {2014-01-01},
+  file         = {2014 - ГОСТ 30804.4.7-2013 Совместимость технических сре.pdf:files/146/2014 - ГОСТ 30804.4.7-2013 Совместимость технических сре.pdf:application/pdf;2014 - ГОСТ 30804.4.7-2013 Совместимость технических сре.pdf:files/148/2014 - ГОСТ 30804.4.7-2013 Совместимость технических сре.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ32144-2013,
+  title        = {ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 32144-2013},
+  url          = {http://docs.cntd.ru/document/1200104301},
+  annotation   = {ГОСТ Р 54149-2010 недействующий, ГОСТ 32144-2013 действующий},
+  date         = {2014-07-01},
+  file         = {2014 - ГОСТ 32144-2013 Электрическая энергия. Совместимо.pdf:files/81/2014 - ГОСТ 32144-2013 Электрическая энергия. Совместимо.pdf:application/pdf;2014 - ГОСТ 32144-2013 Электрическая энергия. Совместимо.pdf:files/158/2014 - ГОСТ 32144-2013 Электрическая энергия. Совместимо.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТР54149-2010,
+  title        = {ГОСТ Р 54149-2010 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ Р 54149-2010},
+  url          = {http://docs.cntd.ru/document/1200084639},
+  annotation   = {ГОСТ Р 54149-2010 недействующий, ГОСТ 32144-2013 действующий},
+  date         = {2013-01-01},
+  file         = {2013 - ГОСТ Р 54149-2010 Электрическая энергия. Совмести.pdf:files/140/2013 - ГОСТ Р 54149-2010 Электрическая энергия. Совмести.pdf:application/pdf;2013 - ГОСТ Р 54149-2010.pdf:files/78/2013 - ГОСТ Р 54149-2010.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТР51317.4.30-2008,
+  title        = {ГОСТ Р 51317.4.30-2008 (МЭК 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ Р 51317.4.30-2008},
+  url          = {http://docs.cntd.ru/document/1200072576},
+  annotation   = {ГОСТ Р 51317.4.30-2008 недействующий, ГОСТ 30804.4.30-2013 действующий},
+  date         = {2010-01-01},
+  file         = {2010 - ГОСТ Р 51317.4.30-2008 Электрическая энергия. Сов.pdf:files/126/2010 - ГОСТ Р 51317.4.30-2008 Электрическая энергия. Сов.pdf:application/pdf;2010 - ГОСТ Р 51317.4.30-2008 Электрическая энергия. Сов.pdf:files/155/2010 - ГОСТ Р 51317.4.30-2008 Электрическая энергия. Сов.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТР51317.4.7-2008,
+  title        = {ГОСТ Р 51317.4.7-2008 Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств},
+  organization = {М: Стандартинформ},
+  number       = {ГОСТ Р 51317.4.7-2008},
+  url          = {http://docs.cntd.ru/document/1200072575},
+  annotation   = {ГОСТ Р 51317.4.7-2008 недействующий, ГОСТ 30804.4.7-2013 действующий},
+  date         = {2010-01-01},
+  file         = {2010 - ГОСТ Р 51317.4.7-2008 Совместимость технических с.pdf:files/133/2010 - ГОСТ Р 51317.4.7-2008 Совместимость технических с.pdf:application/pdf;2010 - ГОСТ Р 51317.4.7-2008 Совместимость технических с.pdf:files/154/2010 - ГОСТ Р 51317.4.7-2008 Совместимость технических с.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТР8.655-2009,
+  title        = {ГОСТ Р 8.655-2009 Государственная система обеспечения единства измерений (ГСИ). Средства измерений показателей качества электрической энергии. Общие технические требования (с Изменением N 1)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ Р 8.655-2009},
+  url          = {http://docs.cntd.ru/document/1200075494},
+  annotation   = {Действующий},
+  date         = {2010-07-01},
+  file         = {2010 - ГОСТ Р 8.655-2009 Государственная система обеспече.pdf:files/449/2010 - ГОСТ Р 8.655-2009 Государственная система обеспече.pdf:application/pdf},
+  urldate      = {2019-03-12},
+}
+
+@Standard{ГОСТ13109-97,
+  title        = {ГОСТ 13109-97 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 13109-97},
+  url          = {http://docs.cntd.ru/document/1200006034},
+  annotation   = {Недействующий},
+  date         = {1999-01-01},
+  file         = {1999 - ГОСТ 13109-97 Электрическая энергия. Совместимост.pdf:files/75/1999 - ГОСТ 13109-97 Электрическая энергия. Совместимост.pdf:application/pdf;1999 - ГОСТ 13109-97 Электрическая энергия. Совместимост.pdf:files/136/1999 - ГОСТ 13109-97 Электрическая энергия. Совместимост.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ30372-95,
+  title        = {ГОСТ 30372-95 Совместимость технических средств электромагнитная. Термины и определения (аутентичен ГОСТ Р 50397-92)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 30372-95},
+  url          = {http://docs.cntd.ru/document/1200015869},
+  annotation   = {Недействующий},
+  date         = {1997-01-01},
+  file         = {2012 - ГОСТ 30372-95 Совместимость технических средств э.pdf:files/103/2012 - ГОСТ 30372-95 Совместимость технических средств э.pdf:application/pdf;2012 - ГОСТ 30372-95 Совместимость технических средств э.pdf:files/156/2012 - ГОСТ 30372-95 Совместимость технических средств э.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ22261-94,
+  title        = {ГОСТ 22261-94 Средства измерений электрических и магнитных величин. Общие технические условия (с Изменением N 1)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 22261-94},
+  url          = {http://docs.cntd.ru/document/1200023321},
+  annotation   = {Действующий},
+  date         = {1996-01-01},
+  file         = {1996 - ГОСТ 22261-94 Средства измерений электрических и .pdf:files/94/1996 - ГОСТ 22261-94 Средства измерений электрических и .pdf:application/pdf;1996 - ГОСТ 22261-94 Средства измерений электрических и .pdf:files/152/1996 - ГОСТ 22261-94 Средства измерений электрических и .pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ13109-87,
+  title        = {ГОСТ 13109-87 Электрическая энергия. Требования к качеству электрической энергии в электрических сетях общего назначения},
+  organization = {М.: Издательство стандартов},
+  number       = {ГОСТ 13109-87},
+  url          = {http://files.stroyinf.ru/Index2/1/4294838/4294838041.htm, http://docs.cntd.ru/document/495793283},
+  annotation   = {Недействующий},
+  date         = {1989-01-01},
+  file         = {1999 - ГОСТ 13109-87 Электрическая энергия. Требования к.pdf:files/115/1999 - ГОСТ 13109-87 Электрическая энергия. Требования к.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ8.216-88,
+  title        = {ГОСТ 8.216-88 (СТ СЭВ 5645-86) Государственная система обеспечения единства измерений (ГСИ). Трансформаторы напряжения. Методика поверки},
+  organization = {М.: Издательство стандартов},
+  number       = {ГОСТ 8.216-88},
+  url          = {http://docs.cntd.ru/document/1200004559},
+  annotation   = {Недействующий},
+  date         = {1989-01-01},
+  file         = {1989 - ГОСТ 8.216-88 Государственная система обеспечения.pdf:files/105/1989 - ГОСТ 8.216-88 Государственная система обеспечения.pdf:application/pdf;1989 - ГОСТ 8.216-88 Государственная система обеспечения.pdf:files/159/1989 - ГОСТ 8.216-88 Государственная система обеспечения.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ19431-84,
+  title        = {ГОСТ 19431-84 Энергетика и электрификация. Термины и определения},
+  organization = {М.: Издательство стандартов},
+  number       = {ГОСТ 19431-84},
+  url          = {http://docs.cntd.ru/document/1200005816},
+  annotation   = {Действующий},
+  date         = {1986-01-01},
+  file         = {1986 - ГОСТ 19431-84 Энергетика и электрификация. Термин.pdf:files/123/1986 - ГОСТ 19431-84 Энергетика и электрификация. Термин.pdf:application/pdf;1986 - ГОСТ 19431-84 Энергетика и электрификация. Термин.pdf:files/151/1986 - ГОСТ 19431-84 Энергетика и электрификация. Термин.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ12.3.019-80,
+  title        = {ГОСТ 12.3.019-80 Система стандартов безопасности труда (ССБТ). Испытания и измерения электрические. Общие требования безопасности (с Изменением N 1)},
+  organization = {М.: ИПК Издательство стандартов},
+  number       = {ГОСТ 12.3.019-80},
+  url          = {http://docs.cntd.ru/document/1200009523},
+  annotation   = {Действующий},
+  date         = {1981-07-01},
+  file         = {1981 - ГОСТ 12.3.019-80 Система стандартов безопасности .pdf:files/96/1981 - ГОСТ 12.3.019-80 Система стандартов безопасности .pdf:application/pdf;1981 - ГОСТ 12.3.019-80 Система стандартов безопасности .pdf:files/150/1981 - ГОСТ 12.3.019-80 Система стандартов безопасности .pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ21027-75,
+  title        = {ГОСТ 21027-75 Системы энергетические. Термины и определения (с Изменениями N 1, 2)},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 21027-75},
+  url          = {http://docs.cntd.ru/document/1200011375},
+  annotation   = {Недействующий},
+  date         = {1976-07-01},
+  file         = {1976 - ГОСТ 21027-75 Системы энергетические. Термины и о.pdf:files/119/1976 - ГОСТ 21027-75 Системы энергетические. Термины и о.pdf:application/pdf;1976 - ГОСТ 21027-75 Системы энергетические. Термины и о.pdf:files/137/1976 - ГОСТ 21027-75 Системы энергетические. Термины и о.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ16263-70,
+  title        = {ГОСТ 16263-70 Государственная система обеспечения единства измерений (ГСИ). Метрология. Термины и определения},
+  organization = {М.: Издательство стандартов},
+  number       = {ГОСТ 16263-70},
+  url          = {http://docs.cntd.ru/document/1200004807},
+  annotation   = {Недействующий},
+  date         = {1971-01-01},
+  file         = {1971 - ГОСТ 16263-70 Государственная система обеспечения.pdf:files/100/1971 - ГОСТ 16263-70 Государственная система обеспечения.pdf:application/pdf;1971 - ГОСТ 16263-70 Государственная система обеспечения.pdf:files/153/1971 - ГОСТ 16263-70 Государственная система обеспечения.pdf:application/pdf},
+  urldate      = {2019-12-03},
+}
+
+@Standard{ГОСТ13109-67,
+  title      = {ГОСТ 13109-67 Электрическая энергия. Нормы качества электрической энергии у ее приемников, присоединенных к электрическим сетям общего назначения (с Изменениями N 1-3)},
+  number     = {ГОСТ 13109-67},
+  url        = {http://docs.cntd.ru/document/495836441},
+  annotation = {Недействующий},
+  date       = {1968-01-01},
+  file       = {1968 - ГОСТ 13109-67 Электрическая энергия. Нормы качест.pdf:files/114/1968 - ГОСТ 13109-67 Электрическая энергия. Нормы качест.pdf:application/pdf},
+  urldate    = {2019-12-03},
+}
+
+@Standard{ГОСТР51317.4.15-2012,
+  title        = {ГОСТ Р 51317.4.15-2012 (МЭК 61000-4-15:2010) Совместимость технических средств электромагнитная. Фликерметр. Функциональные и конструктивные требования},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ Р 51317.4.15-2012},
+  year         = {2013},
+  url          = {http://docs.cntd.ru/document/1200096463},
+  annotation   = {Действующий},
+  date         = {2012-01-01},
   urldate      = {2019-11-16},
 }
 
