--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -1,8 +1,6 @@
 \chapter{Оформление различных элементов}\label{ch:ch1}
-
 \section{Форматирование текста}\label{sec:ch1/sec1}
-
-Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
+%Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
 Стандарты:
 \cite{ГОСТ30804.4.7-2013}
@@ -23,13 +21,13 @@
 \cite{ГОСТ16263-70}
 \cite{ГОСТ13109-67}
 \cite{ГОСТР51317.4.15-2012}
-
-
-
+05.12.19
+\cite{IEEE519-2014}
 
 \section{Ссылки}\label{sec:ch1/sec2}
 
 Ссылки на собственные работы:
+
 \cite{альтман2019кэш}
 \cite{васеева2019сравнительный}
 \cite{васеева2019}
@@ -43,6 +41,8 @@
 \cite{васеева2017распознавание}
 \cite{Васеева2017}
 
+
+
 \begin{figure}[ht]
 	\centerfloat{
 		\includegraphics[scale=0.7]{picture1}
@@ -52,7 +52,7 @@
 
 \begin{figure}[ht]
 	\centerfloat{
-		\includegraphics[scale=0.7]{picture2}
+		\includegraphics[scale=0.7]{picture15}
 	}
 	\caption{Упрощенная классификация обычно используемых методов гармонических и межгармонических оценок.}\label{fig:picture2}
 \end{figure}
