--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -418,4 +418,14 @@
   urldate      = {2019-11-16},
 }
 
+@Standard{IEEE519-2014,
+  title      = {IEEE 519-2014 -- IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems},
+  year       = {2014},
+  url        = {https://standards.ieee.org/content/ieee-standards/en/standard/519-2014.html},
+  annotation = {Действующий},
+  date       = {2014-03-27},
+  file       = {IEEE 519-2014 - Рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах:files/428/519-2014.html:text/html},
+  urldate    = {2019-12-04},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
