SET bibliolate and text sec1_1

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -1,5 +1,52 @@
-\chapter{Оформление различных элементов}\label{ch:ch1}
-\section{Форматирование текста}\label{sec:ch1/sec1}
+\chapter{Анализ и контроль показателей качества электрической энергии в электроэнергетических системах}\label{ch:ch1}
+
+В первом разделе рассматривается понятие, характеризующее КЭ в электрических сетях систем электроснабжения переменного тока с частотами 50 и 60~Гц и порядок оценки результатов. Стандарты в области контроля определяющие состав показателей качества электрической энергии, методику измерений и характеристики средств измерений. В результате анализа производится сравнение государственных стандартов Российской Федерации и международных стандартов (МЭК, IEC – International Electrotechnical Commission), которые описывают требования и нормы КЭ \cite{IEC}.
+%\hyperlink{https://www.iec.ch/}{[199]}. 
+% [199 - International Electrotechnical Commission [Электронный ресурс] – Режим доступа:https://www.iec.ch/]
+
+В первом разделе произведен сравнительный анализ существующих средств контроля учета показателей КЭ. В заключении описывается основные задачи и виды контроля КЭ.
+
+\section{Понятие качества электрической энергии}\label{sec:ch1/sec1_1}
+Повышение КЭ является основным фактором улучшения энергетической эффективности промышленных предприятий \cite{закон2009энергосбережении}. 
+% [10 - Закон Ф. Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации //№ 261-ФЗ от 23.11. – 2009.]
+%http://www.consultant.ru/document/cons_doc_LAW_93978/
+
+Понятие качества электрической энергии (КЭ) описано ГОСТ 32144–2013~\cite{ГОСТ32144-2013} п.3.1.38, обозначает степень соответствия характеристик электрической энергии в данной точке электрической системы совокупности нормированных показателей КЭ.
+% [125 - ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200104301/]
+
+Задача исследования – улучшить показатели качества электрической энергии (ПКЭ) в электрических сетях систем электроснабжения, совершенствуя средства измерительных устройств для определения гармоник. При разработке технического устройства должны учитываться ПКЭ  согласно действующим нормативам. 
+
+Введен целый ряд нормативных документов (МЭК, ГОСТ). Изменение стандартов в области измерений электрической энергии показано на рисунке.
+\cite{ГОСТ30804.4.30-2013, ГОСТ30804.4.7-2013, ГОСТ32144-2013, ГОСТР8.655-2009, ГОСТР51317.4.15-2012,ГОСТ33073-2014,ГОСТ8.622-2013} 
+ 
+\begin{figure}[ht]
+	\centerfloat{
+		\includegraphics[scale=0.7]{picture1}
+	}
+	\caption{Развитие государственных стандартов в области контроля КЭ.}\label{fig:picture1}
+\end{figure}
+%Действующие стандарты на рисунке
+
+% [179 - ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200104665]
+
+% [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200103652]
+
+% [125 - ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200104301/]
+
+% [136 - ГОСТ Р 8.655-2009 Государственная система обеспечения единства измерений (ГСИ). Средства измерений показателей качества электрической энергии. Общие технические требования (с Изменением N 1) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200075494/]
+
+% [194 - ГОСТ Р 51317.4.15-2012 (МЭК 61000-4-15:2010) Совместимость технических средств электромагнитная. Фликерметр. Функциональные и конструктивные требования [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200096463]
+
+% [195 - ГОСТ 33073-2014 Электрическая энергия. Совместимость технических средств электромагнитная. Контроль и мониторинг качества электрической энергии в системах электроснабжения общего назначения (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200115349]
+
+% [196 - ГОСТ 8.622-2013 Государственная система обеспечения единства измерений (ГСИ). Испытательное оборудование для определения коэффициента проникания тест-аэрозоля через средства индивидуальной защиты органов дыхания. Методика аттестации [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200108162]
+
+
+
+
+
+%\chapter{Оформление различных элементов}\label{ch:ch1}
+%\section{Форматирование текста}\label{sec:ch1/sec1}
 %Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
 Стандарты:
@@ -12,7 +59,6 @@
 \cite{ГОСТР51317.4.7-2008}
 \cite{ГОСТР8.655-2009}
 \cite{ГОСТ13109-97}
-\cite{ГОСТ30372-95}
 \cite{ГОСТ13109-87}
 \cite{ГОСТ8.216-88}
 \cite{ГОСТ19431-84}
@@ -21,8 +67,10 @@
 \cite{ГОСТ16263-70}
 \cite{ГОСТ13109-67}
 \cite{ГОСТР51317.4.15-2012}
+\cite{ГОСТ8.622-2013}
 05.12.19
 \cite{IEEE519-2014}
+
 
 \section{Ссылки}\label{sec:ch1/sec2}
 
@@ -43,12 +91,6 @@
 
 
 
-\begin{figure}[ht]
-	\centerfloat{
-		\includegraphics[scale=0.7]{picture1}
-	}
-	\caption{Развитие государственных стандартов в области контроля КЭ.}\label{fig:picture1}
-\end{figure}
 
 \begin{figure}[ht]
 	\centerfloat{
