--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -428,4 +428,33 @@
   urldate    = {2019-12-04},
 }
 
+@Online{IEC,
+  author  = {Copyright},
+  title   = {International Electrotechnical Commission},
+  year    = {2019},
+  url     = {https://www.iec.ch/#learn},
+  urldate = {2019-12-05},
+}
+
+@Article{закон2009энергосбережении,
+  author  = {Закон, Федеральный},
+  title   = {Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации},
+  journal = {№ 261-ФЗ от 23.11},
+  year    = {2009},
+  file    = {Федеральный закон от 23_11_2009 N 261-ФЗ (ред_ от 03_08_2018.rtf:files/355/Федеральный закон от 23_11_2009 N 261-ФЗ (ред_ от 03_08_2018.rtf:application/msword},
+  url     = {http://www.consultant.ru/document/cons_doc_LAW_93978/},
+  urldate = {2019-12-06},
+}
+
+@Standard{ГОСТ8.622-2013,
+  title        = {ГОСТ 8.622-2013 Государственная система обеспечения единства измерений (ГСИ). Испытательное оборудование для определения коэффициента проникания тест-аэрозоля через средства индивидуальной защиты органов дыхания. Методика аттестации},
+  organization = {М.: Стандартинформ},
+  number       = {ГОСТ 8.622-2013},
+  year         = {2013},
+  url          = {http://docs.cntd.ru/document/1200108162},
+  annotation   = {Действующий},
+  date         = {2015-01-01},
+  urldate      = {2019-12-06},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
